// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attributes Api all() parse the returned data correctly 1`] = `
[
  {
    "categories": [
      {
        "id": 2,
        "name": "Lumière",
      },
      {
        "id": 1,
        "name": "Son",
      },
    ],
    "entities": [
      "material",
    ],
    "id": 1,
    "is_totalisable": true,
    "name": "Poids",
    "type": "float",
    "unit": "kg",
  },
  {
    "categories": [],
    "entities": [
      "material",
    ],
    "id": 2,
    "max_length": null,
    "name": "Couleur",
    "type": "string",
  },
  {
    "categories": [
      {
        "id": 2,
        "name": "Lumière",
      },
      {
        "id": 1,
        "name": "Son",
      },
    ],
    "entities": [
      "material",
    ],
    "id": 3,
    "is_totalisable": true,
    "name": "Puissance",
    "type": "integer",
    "unit": "W",
  },
  {
    "categories": [],
    "entities": [
      "material",
    ],
    "id": 4,
    "name": "Conforme",
    "type": "boolean",
  },
  {
    "categories": [],
    "entities": [
      "material",
      "material",
    ],
    "id": 5,
    "name": "Date d'achat",
    "type": "date",
  },
  {
    "categories": [
      {
        "id": 3,
        "name": "Transport",
      },
      {
        "id": 4,
        "name": "Décors",
      },
    ],
    "entities": [
      "material",
    ],
    "id": 6,
    "name": "Nettoyé le",
    "type": "date",
  },
  {
    "categories": [
      {
        "id": 3,
        "name": "Transport",
      },
    ],
    "entities": [
      "material",
    ],
    "id": 7,
    "max_length": null,
    "name": "Immatriculation",
    "type": "string",
  },
  {
    "categories": [],
    "entities": [
      "material",
    ],
    "id": 8,
    "is_totalisable": true,
    "name": "Prix d'achat",
    "type": "float",
    "unit": "€",
  },
]
`;

exports[`Attributes Api create() parse the returned data correctly (with #1) 1`] = `
{
  "categories": [
    {
      "id": 2,
      "name": "Lumière",
    },
    {
      "id": 1,
      "name": "Son",
    },
  ],
  "entities": [
    "material",
  ],
  "id": 1,
  "is_totalisable": true,
  "name": "Poids",
  "type": "float",
  "unit": "kg",
}
`;

exports[`Attributes Api create() parse the returned data correctly (with #2) 1`] = `
{
  "categories": [],
  "entities": [
    "material",
  ],
  "id": 2,
  "max_length": null,
  "name": "Couleur",
  "type": "string",
}
`;

exports[`Attributes Api create() parse the returned data correctly (with #3) 1`] = `
{
  "categories": [
    {
      "id": 2,
      "name": "Lumière",
    },
    {
      "id": 1,
      "name": "Son",
    },
  ],
  "entities": [
    "material",
  ],
  "id": 3,
  "is_totalisable": true,
  "name": "Puissance",
  "type": "integer",
  "unit": "W",
}
`;

exports[`Attributes Api create() parse the returned data correctly (with #4) 1`] = `
{
  "categories": [],
  "entities": [
    "material",
  ],
  "id": 4,
  "name": "Conforme",
  "type": "boolean",
}
`;

exports[`Attributes Api create() parse the returned data correctly (with #5) 1`] = `
{
  "categories": [],
  "entities": [
    "material",
    "material",
  ],
  "id": 5,
  "name": "Date d'achat",
  "type": "date",
}
`;

exports[`Attributes Api create() parse the returned data correctly (with #6) 1`] = `
{
  "categories": [
    {
      "id": 3,
      "name": "Transport",
    },
    {
      "id": 4,
      "name": "Décors",
    },
  ],
  "entities": [
    "material",
  ],
  "id": 6,
  "name": "Nettoyé le",
  "type": "date",
}
`;

exports[`Attributes Api create() parse the returned data correctly (with #7) 1`] = `
{
  "categories": [
    {
      "id": 3,
      "name": "Transport",
    },
  ],
  "entities": [
    "material",
  ],
  "id": 7,
  "max_length": null,
  "name": "Immatriculation",
  "type": "string",
}
`;

exports[`Attributes Api create() parse the returned data correctly (with #8) 1`] = `
{
  "categories": [],
  "entities": [
    "material",
  ],
  "id": 8,
  "is_totalisable": true,
  "name": "Prix d'achat",
  "type": "float",
  "unit": "€",
}
`;

exports[`Attributes Api one() parse the returned data correctly (with #1) 1`] = `
{
  "categories": [
    {
      "id": 2,
      "name": "Lumière",
    },
    {
      "id": 1,
      "name": "Son",
    },
  ],
  "entities": [
    "material",
  ],
  "id": 1,
  "is_totalisable": true,
  "name": "Poids",
  "type": "float",
  "unit": "kg",
}
`;

exports[`Attributes Api one() parse the returned data correctly (with #2) 1`] = `
{
  "categories": [],
  "entities": [
    "material",
  ],
  "id": 2,
  "max_length": null,
  "name": "Couleur",
  "type": "string",
}
`;

exports[`Attributes Api one() parse the returned data correctly (with #3) 1`] = `
{
  "categories": [
    {
      "id": 2,
      "name": "Lumière",
    },
    {
      "id": 1,
      "name": "Son",
    },
  ],
  "entities": [
    "material",
  ],
  "id": 3,
  "is_totalisable": true,
  "name": "Puissance",
  "type": "integer",
  "unit": "W",
}
`;

exports[`Attributes Api one() parse the returned data correctly (with #4) 1`] = `
{
  "categories": [],
  "entities": [
    "material",
  ],
  "id": 4,
  "name": "Conforme",
  "type": "boolean",
}
`;

exports[`Attributes Api one() parse the returned data correctly (with #5) 1`] = `
{
  "categories": [],
  "entities": [
    "material",
    "material",
  ],
  "id": 5,
  "name": "Date d'achat",
  "type": "date",
}
`;

exports[`Attributes Api one() parse the returned data correctly (with #6) 1`] = `
{
  "categories": [
    {
      "id": 3,
      "name": "Transport",
    },
    {
      "id": 4,
      "name": "Décors",
    },
  ],
  "entities": [
    "material",
  ],
  "id": 6,
  "name": "Nettoyé le",
  "type": "date",
}
`;

exports[`Attributes Api one() parse the returned data correctly (with #7) 1`] = `
{
  "categories": [
    {
      "id": 3,
      "name": "Transport",
    },
  ],
  "entities": [
    "material",
  ],
  "id": 7,
  "max_length": null,
  "name": "Immatriculation",
  "type": "string",
}
`;

exports[`Attributes Api one() parse the returned data correctly (with #8) 1`] = `
{
  "categories": [],
  "entities": [
    "material",
  ],
  "id": 8,
  "is_totalisable": true,
  "name": "Prix d'achat",
  "type": "float",
  "unit": "€",
}
`;

exports[`Attributes Api update() parse the returned data correctly (with #1) 1`] = `
{
  "categories": [
    {
      "id": 2,
      "name": "Lumière",
    },
    {
      "id": 1,
      "name": "Son",
    },
  ],
  "entities": [
    "material",
  ],
  "id": 1,
  "is_totalisable": true,
  "name": "Poids",
  "type": "float",
  "unit": "kg",
}
`;

exports[`Attributes Api update() parse the returned data correctly (with #2) 1`] = `
{
  "categories": [],
  "entities": [
    "material",
  ],
  "id": 2,
  "max_length": null,
  "name": "Couleur",
  "type": "string",
}
`;

exports[`Attributes Api update() parse the returned data correctly (with #3) 1`] = `
{
  "categories": [
    {
      "id": 2,
      "name": "Lumière",
    },
    {
      "id": 1,
      "name": "Son",
    },
  ],
  "entities": [
    "material",
  ],
  "id": 3,
  "is_totalisable": true,
  "name": "Puissance",
  "type": "integer",
  "unit": "W",
}
`;

exports[`Attributes Api update() parse the returned data correctly (with #4) 1`] = `
{
  "categories": [],
  "entities": [
    "material",
  ],
  "id": 4,
  "name": "Conforme",
  "type": "boolean",
}
`;

exports[`Attributes Api update() parse the returned data correctly (with #5) 1`] = `
{
  "categories": [],
  "entities": [
    "material",
    "material",
  ],
  "id": 5,
  "name": "Date d'achat",
  "type": "date",
}
`;

exports[`Attributes Api update() parse the returned data correctly (with #6) 1`] = `
{
  "categories": [
    {
      "id": 3,
      "name": "Transport",
    },
    {
      "id": 4,
      "name": "Décors",
    },
  ],
  "entities": [
    "material",
  ],
  "id": 6,
  "name": "Nettoyé le",
  "type": "date",
}
`;

exports[`Attributes Api update() parse the returned data correctly (with #7) 1`] = `
{
  "categories": [
    {
      "id": 3,
      "name": "Transport",
    },
  ],
  "entities": [
    "material",
  ],
  "id": 7,
  "max_length": null,
  "name": "Immatriculation",
  "type": "string",
}
`;

exports[`Attributes Api update() parse the returned data correctly (with #8) 1`] = `
{
  "categories": [],
  "entities": [
    "material",
  ],
  "id": 8,
  "is_totalisable": true,
  "name": "Prix d'achat",
  "type": "float",
  "unit": "€",
}
`;
